--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,6 +18,9 @@
         <nav class="nav-wrapper">
             <div class="nav-container">
                 <div class="nav-item">
+                    <p class="nav-text">Login Here!</p>
+                </div>
+                <div class="nav-item">
                     <p class="nav-text">> HTML</p>
                 </div>
                 <div class="nav-item">
@@ -26,6 +29,12 @@
                 <div class="nav-item">
                     <p class="nav-text">> JavaScript</p>
                 </div>
+                {{!-- Logout Area only displays if User is loggedIn --}}
+                {{#if loggedIn}}
+                <div class="nav-item">
+                    <p class="nav-text">Logout Here</p>
+                </div>
+                {{/if}}
             </div>
         </nav>
 
