--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -26,16 +26,25 @@ body {
 /* Header Section Styling */
 header {
     text-align: center;
-    padding: 20px 60px;
+    padding: 10px 30px;
     background-image: url('../images/nebula.jpg');
     background-size: cover;
     background-repeat: no-repeat;
     background-position: right top;
     color: white;
+    height: 100px;
+    overflow: hidden;
 }
 
+header div{
+    height: 100%;
+}
 .ship-img {
-    width: 700px;
+    position: absolute;
+    width: 40%;
+    margin-right: 50%;
+    transform: translateX(-50%);
+    justify-self: center;
 }
 
 .header-bar{
@@ -43,13 +52,15 @@ header {
 }
 
 header h1{
-    line-height: 50px;
-    font-size: calc(30px + .4vw);
+    line-height: 35px;
+    font-size: calc(18px + .4vw);
 }
 
 header a {
     text-decoration: none;
     color: white;
+    position: relative;
+    top: 25px;
 }
 
 .content-container {
@@ -61,7 +72,7 @@ header a {
 /* Nav Bar Styling */
 .nav-wrapper{
     display: block;
-    margin: 20px 0 20px 10px;;
+    margin: 20px 0 20px 10px;
 
 }
 
@@ -167,6 +178,10 @@ header a {
   .align-center {
     align-items: center;
   }
+
+  .align-self {
+      align-self: center;
+  }
   
   .col-auto {
     flex-grow: 1;
@@ -218,4 +233,209 @@ header a {
   
   .col-12 {
     flex: 0 0 100%;
+  }
+
+    /* col-xl */
+    @media screen and (min-width: 1200px) {
+        .col-xl-1 {
+          flex: 0 0 calc(100% * 1 / 12 - 2%);
+        }
+      
+        .col-xl-2 {
+          flex: 0 0 calc(100% * 2 / 12 - 2%);
+        }
+      
+        .col-xl-3 {
+          flex: 0 0 calc(100% * 3 / 12 - 2%);
+        }
+      
+        .col-xl-4 {
+          flex: 0 0 calc(100% * 4 / 12 - 2%);
+        }
+      
+        .col-xl-5 {
+          flex: 0 0 calc(100% * 5 / 12 - 2%);
+        }
+      
+        .col-xl-6 {
+          flex: 0 0 calc(100% * 6 / 12 - 2%);
+        }
+      
+        .col-xl-7 {
+          flex: 0 0 calc(100% * 7 / 12 - 2%);
+        }
+      
+        .col-xl-8 {
+          flex: 0 0 calc(100% * 8 / 12 - 2%);
+        }
+      
+        .col-xl-9 {
+          flex: 0 0 calc(100% * 9 / 12 - 2%);
+        }
+      
+        .col-xl-10 {
+          flex: 0 0 calc(100% * 10 / 12 - 2%);
+        }
+      
+        .col-xl-11 {
+          flex: 0 0 calc(100% * 11 / 12 - 2%);
+        }
+      
+        .col-xl-12 {
+          flex: 0 0 100%;
+        }
+      }
+      
+        /* col-lg */
+  @media screen and (min-width: 992px) {
+    .col-lg-1 {
+      flex: 0 0 calc(100% * 1 / 12 - 2%);
+    }
+  
+    .col-lg-2 {
+      flex: 0 0 calc(100% * 2 / 12 - 2%);
+    }
+  
+    .col-lg-3 {
+      flex: 0 0 calc(100% * 3 / 12 - 2%);
+    }
+  
+    .col-lg-4 {
+      flex: 0 0 calc(100% * 4 / 12 - 2%);
+    }
+  
+    .col-lg-5 {
+      flex: 0 0 calc(100% * 5 / 12 - 2%);
+    }
+  
+    .col-lg-6 {
+      flex: 0 0 calc(100% * 6 / 12 - 2%);
+    }
+  
+    .col-lg-7 {
+      flex: 0 0 calc(100% * 7 / 12 - 2%);
+    }
+  
+    .col-lg-8 {
+      flex: 0 0 calc(100% * 8 / 12 - 2%);
+    }
+  
+    .col-lg-9 {
+      flex: 0 0 calc(100% * 9 / 12 - 2%);
+    }
+  
+    .col-lg-10 {
+      flex: 0 0 calc(100% * 10 / 12 - 2%);
+    }
+  
+    .col-lg-11 {
+      flex: 0 0 calc(100% * 11 / 12 - 2%);
+    }
+  
+    .col-lg-12 {
+      flex: 0 0 100%;
+    }
+  }
+
+    /* col-md */
+    @media screen and (min-width: 768px) {
+
+        .col-md-1 {
+          flex: 0 0 calc(100% * 1 / 12 - 2%);
+        }
+      
+        .col-md-2 {
+          flex: 0 0 calc(100% * 2 / 12 - 2%);
+        }
+      
+        .col-md-3 {
+          flex: 0 0 calc(100% * 3 / 12 - 2%);
+        }
+      
+        .col-md-4 {
+          flex: 0 0 calc(100% * 4 / 12 - 2%);
+        }
+      
+        .col-md-5 {
+          flex: 0 0 calc(100% * 5 / 12 - 2%);
+        }
+      
+        .col-md-6 {
+          flex: 0 0 calc(100% * 6 / 12 - 2%);
+        }
+      
+        .col-md-7 {
+          flex: 0 0 calc(100% * 7 / 12 - 2%);
+        }
+      
+        .col-md-8 {
+          flex: 0 0 calc(100% * 8 / 12 - 2%);
+        }
+      
+        .col-md-9 {
+          flex: 0 0 calc(100% * 9 / 12 - 2%);
+        }
+      
+        .col-md-10 {
+          flex: 0 0 calc(100% * 10 / 12 - 2%);
+        }
+      
+        .col-md-11 {
+          flex: 0 0 calc(100% * 11 / 12 - 2%);
+        }
+      
+        .col-md-12 {
+          flex: 0 0 100%;
+        }
+      }
+
+  /* col-sm */
+  @media screen and (min-width: 640px) {
+    .col-sm-1 {
+      flex: 0 0 calc(100% * 1 / 12 - 2%);
+    }
+  
+    .col-sm-2 {
+      flex: 0 0 calc(100% * 2 / 12 - 2%);
+    }
+  
+    .col-sm-3 {
+      flex: 0 0 calc(100% * 3 / 12 - 2%);
+    }
+  
+    .col-sm-4 {
+      flex: 0 0 calc(100% * 4 / 12 - 2%);
+    }
+  
+    .col-sm-5 {
+      flex: 0 0 calc(100% * 5 / 12 - 2%);
+    }
+  
+    .col-sm-6 {
+      flex: 0 0 calc(100% * 6 / 12 - 2%);
+    }
+  
+    .col-sm-7 {
+      flex: 0 0 calc(100% * 7 / 12 - 2%);
+    }
+  
+    .col-sm-8 {
+      flex: 0 0 calc(100% * 8 / 12 - 2%);
+    }
+  
+    .col-sm-9 {
+      flex: 0 0 calc(100% * 9 / 12 - 2%);
+    }
+  
+    .col-sm-10 {
+      flex: 0 0 calc(100% * 10 / 12 - 2%);
+    }
+  
+    .col-sm-11 {
+      flex: 0 0 calc(100% * 11 / 12 - 2%);
+    }
+  
+    .col-sm-12 {
+      flex: 0 0 100%;
+    }
   }
