--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="/stylesheets/style.css">
+    
     <title>Welcome to Nebula-Edu</title>
 </head>
 <body>
@@ -26,6 +27,7 @@
         </div>
     </header>
 
+<div class="content-wrapper">
     <div class="content-container">
         <!-- Nav-Bar Area -->
         <nav class="nav-wrapper col-3">
@@ -62,22 +64,6 @@
                     </ul>
                 </div>
                 {{/if}}
-                {{!-- <div class="nav-item">
-                    <p class="nav-text"> HTML</p>
-                </div>
-                <div class="nav-item">
-                    <p class="nav-text"> CSS</p>
-                </div>
-                <div class="nav-item">
-                    <p class="nav-text"> JavaScript</p>
-                </div>
-                {{#if loggedIn}}
-                    <a href="/new-lesson" id="add-btn">
-                        <div class="nav-item">
-                            <p class="nav-text">Add Lesson!</p>
-                        </div>
-                    </a>
-                {{/if}} --}}
             </div>
         </nav>
 
@@ -86,6 +72,7 @@
             {{{ body }}}
         </main>
     </div>
+</div>
 
     {{!-- Script Area, but only when logged in --}}
     {{#if loggedIn}}
