--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,14 +1,18 @@
-<h1>Login</h1>
-<form id="login-form" class="card-body">
-    <label class="form-label" for="username-login">Username</label>
-    <input id="username-login" type="text" autofocus="true" class="form-input" />
-
-    <label class="form-label" for="password-login">Password</label>
-    <input id="password-login" type="password" autofocus="true" class="form-input" />
-
-    <button type="submit" class="btn">Login</button>
-    <a class="login-link" href="/signup">Sign up instead</a>
-</form>
+<h2 class="uppercase">Login</h2>
+<div class="card">
+    <form id="login-form" class="card-body">
+        <div>
+            <label class="form-label" for="username-login">Username</label><br>
+            <input id="username-login" type="text" autofocus="true" class="form-input" />
+        </div>
+        <div>
+            <label class="form-label" for="password-login">Password</label><br>
+            <input id="password-login" type="password" autofocus="true" class="form-input" />
+        </div>
+        <button type="submit" class="btn">Login</button>
+        <a class="login-link" href="/signup">Sign up instead</a>
+    </form>
+</div>
 
 {{!-- Script Area --}}
 <script src="/javascript/login.js"></script>
