--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -53,7 +53,7 @@ header div{
 
 header h1{
     line-height: 35px;
-    font-size: calc(18px + .4vw);
+    font-size: 25px;
 }
 
 header a {
@@ -61,6 +61,12 @@ header a {
     color: white;
     position: relative;
     top: 25px;
+    font-size: calc(15px + .4vw);
+}
+
+header a:hover{
+  color: var(--light-purple);
+  text-decoration: none;
 }
 
 .btn {
@@ -72,14 +78,10 @@ header a {
   display: block;
 }
 
-.content-wrapper {
-    margin: auto 0;
-}
 .content-container {
-    display: grid;
-    grid-template-columns: 250px 1fr;
-    grid-template-areas: "sidebar main";
-    width: 1200px;
+  display: grid;
+  grid-template-columns: 250px 1fr;
+  grid-template-areas: "sidebar main";
 }
 
 /* Nav Bar Styling */
@@ -89,9 +91,7 @@ header a {
 }
 
 .nav-container {
-    display: block;
-    padding: 10px 0 10px 30px;
-    border-right: solid 1px var(--primary);
+    border-right: solid 1px grey;
 }
 .nav-block{
     margin: 20px 0;
