--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="/stylesheets/style.css">
-    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <title>Welcome to Nebula-Edu</title>
 </head>
 <body>
     <!-- Header Area -->
     <header id="#" class="header-bar flex-row justify-space-between align-center">
         <div class="col-1 col-lg-1 col-xl-1">
-            <h1 class="uppercase flex-column"><span>Nebula</span><span style="font-size: calc(45px + .4vw);">Edu</span></h1>
+            <h1 class="uppercase flex-column"><span>Nebula</span><span style="font-size: 50px;">Edu</span></h1>
         </div>
         {{!-- <div class="col-6 col-sm-2 col-md-9 col-lg-8 col-xl-8">
             <img class="ship-img" src="/images/ship-trail.png" alt="Rocket Ship Graphic" />
@@ -27,10 +27,10 @@
         </div>
     </header>
 
-<div class="content-wrapper">
-    <div class="content-container">
+
+    <div class="content-container container">
         <!-- Nav-Bar Area -->
-        <nav class="nav-wrapper col-3">
+        <nav class="nav-wrapper">
             <div class="nav-container">
                 <div class="nav-block">
                     <p class="uppercase nav-header">Learn</p>
@@ -72,11 +72,13 @@
             {{{ body }}}
         </main>
     </div>
-</div>
+
 
     {{!-- Script Area, but only when logged in --}}
     {{#if loggedIn}}
         <script src="/javascript/logout.js"></script>
     {{/if}}
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 </body>
 </html>
