Added new editing, deletion, commenting, Upvoting, testing features completed in this area

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,7 +10,7 @@
 <body>
     <!-- Header Area -->
     <header id="#" class="header-bar">
-        <h1>Nebula-Edu.</h1>
+        <a href="/"><h1>Nebula-Edu.</h1></a>
     </header>
 
     <div class="content-container">
