--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -2,12 +2,12 @@
 <section>
     <h2>Your Posts</h2>
     {{#each lessons as |lessons|}}
-        {{> lesson-info lessons}}
+        {{> dash-edit lessons}}
     {{/each}}
 </section>
 {{/if}}
 
-{{!-- Commented out for now until posts can be created  --}}
-{{!-- <button type="submit" class="btn"><a class="link" href="/dashboard/add-lesson">+ New Lesson</a></button>
+
+<button type="submit" class="btn"><a class="link" href="/new-lesson">+ New Lesson</a></button>
  
-<script src="/javascript/add-lesson.js"></script> --}}
+<script src="/javascript/add-lesson.js"></script>
