--- a/views/partials/lesson-info.handlebars
+++ b/views/partials/lesson-info.handlebars
@@ -4,8 +4,9 @@
         <span>({{format_url post_url}})</span>
     </div> --}}
     <div class="meta">
-        {{vote_count}} {{format_plural "Star" vote_count}} by {{user.username}} on {{ format_date }}
+        {{vote_count}} {{format_plural "Star" vote_count}} by {{user.username}} on {{format_date created_at}}
         |
         <a href="/lessons/{{id}}">{{comments.length}} {{format_plural "Comment" comments.length}}</a>
     </div>
+    <p class="card-body">{{content}}</p>
 </article>
