Added new html, css, js handlebar routing for page prep, fixed error with upvote, and detailed

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -37,9 +37,11 @@
                 <div class="nav-item">
                     <p class="nav-text">> CSS</p>
                 </div>
-                <div class="nav-item">
+                <a href="" id="nav-btn">
+                    <div class="nav-item">
                     <p class="nav-text">> JavaScript</p>
                 </div>
+                </a>
                 {{#if loggedIn}}
                     <a href="/new-lesson" id="add-btn">
                         <div class="nav-item">
