--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,7 +1,4 @@
-<ul class="post-list">
+<h2 class="uppercase">Lessons</h2>
   {{#each lessons as |lessons|}}
-  <li>
     {{> lesson-info lessons }}
-  </li>
   {{/each}}
-</ul>
