--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,15 +1,15 @@
 <h2 class="uppercase">Login</h2>
-<form id="login-form" class="card-body">
-    <div>
+<form id="login-form">
+    <div class="form-group">
         <label class="form-label" for="username-login">Username</label><br>
-        <input id="username-login" type="text" autofocus="true" class="form-input" />
+        <input id="username-login" type="text" autofocus="true" class="form-input form-control" />
     </div>
-    <div>
+    <div class="form-group">
         <label class="form-label" for="password-login">Password</label><br>
-        <input id="password-login" type="password" autofocus="true" class="form-input" />
+        <input id="password-login" type="password" class="form-input form-control"/>
     </div>
-    <button type="submit" class="btn">Login</button>
-    <a class="login-link" href="/signup">Sign up instead</a>
+    <button type="submit" class="button">Login</button>
+    <a href="/signup" class="login-link btn btn-link">Sign up instead</a>
 </form>
 
 {{!-- Script Area --}}
