--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/stylesheets/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="/stylesheets/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous"/>
     <title>Welcome to Nebula-Edu</title>
 </head>
 <body>
     <!-- Header Area -->
-    <header id="#" class="header-bar flex-row justify-space-between align-center">
+    <header id="#" class="header-bar">
+        <div class="container flex-row justify-space-between align-center">
         <div class="col-1 col-lg-1 col-xl-1">
             <h1 class="uppercase flex-column"><span>Nebula</span><span style="font-size: 50px;">Edu</span></h1>
         </div>
@@ -24,6 +26,7 @@
             {{else}}
             <a href="/login" id="login-btn" class="test">Login</a>
             {{/if}}
+        </div>
         </div>
     </header>
 
