--- a/views/partials/lesson-info.handlebars
+++ b/views/partials/lesson-info.handlebars
@@ -1,11 +1,28 @@
-<article class="post">
+<div class="card mb-3">
+    <div class="row no-gutters">
+        <div class="col-md-2 img">
+            <img src="../../images/rocket-ship.svg" class="card-img align-middle"/>
+        </div>
+        <div class="col-md-10">
+            <div class="card-body">
+                <h5 class="card-title"><a href="/lessons/{{id}}">{{title}}</a></h5>
+                <p class="card-text"><small class="text-muted">by {{user.username}} on {{ format_date }}</small></p>
+                <p class="card-text">{{desc}}</p>
+                <div>
+                    <p class="card-text"><small class="text-muted votes"><i class="fas fa-star"></i> {{vote_count}} {{format_plural "Star" vote_count}}</small></p>
+                    <p class="card-text"><small class="text-muted">{{comments.length}}
+                                {{format_plural "Comment" comments.length}}</small></p>
+                </div>
+            </div>
+        </div>
+    </div>    
+</div>
     {{!-- <div class="title">
-        <a href="{{post_url}}" target="_blank">{{title}}</a>
-        <span>({{format_url post_url}})</span>
-    </div> --}}
+        <a href="#" target="_blank">{{title}}</a>
+        <p>{{desc}}</p>
+    </div>
     <div class="meta">
         {{vote_count}} {{format_plural "Star" vote_count}} by {{user.username}} on {{ format_date }}
         |
         <a href="/lessons/{{id}}">{{comments.length}} {{format_plural "Comment" comments.length}}</a>
-    </div>
-</article>
+    </div> --}}
