--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,14 +1,17 @@
 <h1>Sign-Up</h1>
-<form id="signup-form" class="card-body">
-    <label for="username-signup" class="form-label">Username</label>
-    <input id="username-signup" type="text" class="form-input" />
+<form id="signup-form">
+    <div class="form-group">
+        <label for="username-signup" class="form-label">Username</label>
+        <input id="username-signup" type="text" class="form-input form-control" />
+    </div>
+    <div class="form-group">
+        <label class="form-label" for="password-signup">Password</label>
+        <input id="password-signup" type="password" class="form-input form-control" aria-describedby="passwordHelp"/>
+        <small id="passwordHelp" class="form-text text-muted">Passwords should be 8 or more characters</small>
+    </div>
 
-
-    <label class="form-label" for="password-signup">Password</label>
-    <input id="password-signup" type="password" class="form-input" />
-
-    <button type="submit" class="btn">Sign up</button>
-    <a class="login-link" href="/login">Log in instead</a>
+    <button type="submit" class="button">Sign up</button>
+    <a class="login-link btn btn-link" href="/login">Log in instead</a>
 </form>
 
 <!-- Script Area -->
