--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,10 +16,10 @@
         <div class="col-1 col-lg-1 col-xl-1">
             <a href="/"><h1 class="uppercase flex-column"><span>Nebula</span><span style="font-size: 50px;">Edu</span></h1></a>
         </div>
-        {{!-- <div class="col-6 col-sm-2 col-md-9 col-lg-8 col-xl-8">
+        <div>
             <img class="ship-img" src="/images/ship-trail.png" alt="Rocket Ship Graphic" />
-        </div> --}}
-        <div class="col-1 col-lg-1 col-xl-1">
+        </div>
+        <div class="col-1 col-lg-1 col-xl-1" style="position: relative; top: 25px;">
             {{!-- Logout Area only displays if User is loggedIn --}}
             {{#if loggedIn}}
             <a href="/logout" id="logout" class="test">Logout</a>
