--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -6,10 +6,13 @@
     </div>
     <div class="form-group">
         <label class="form-label" for="password-login">Password</label><br>
-        <input id="password-login" type="password" class="form-input form-control"/>
+        <input id="password-login" type="password" class="form-input form-control" />
     </div>
-    <button type="submit" class="button">Login</button>
-    <a href="/signup" class="login-link btn btn-link">Sign up instead</a>
+    <div class="d-flex align-items-end flex-column justify-content-end mb-3">
+        <button type="submit" class="btn bd-highlight">Login</button>
+        <a href="/signup" class="login-link btn-link"><small>Sign up instead</small></a>
+    </div>
+
 </form>
 
 {{!-- Script Area --}}
