--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -1,11 +1,13 @@
 <div class="comments">
   {{#each this}}
-  <section class="comment">
+  <section class="comment card mt-4">
+    <div class="card-body">
     <div class="meta">
-      {{user.username}} on {{format_date created_at}}
+      <span class="text-dark font-weight-bold">{{user.username}}</span> <small class="text-muted">{{format_date created_at}}</small>
     </div>
     <div class="text">
-      {{comment_text}}
+      <p class="card-text">{{comment_text}}</p>
+    </div>
     </div>
   </section>
   {{/each}}
