--- a/views/partials/lesson-info.handlebars
+++ b/views/partials/lesson-info.handlebars
@@ -1,18 +1,14 @@
 <div class="card mb-3">
     <div class="row no-gutters">
-        <div class="col-md-2 img">
-            <img src="../../images/rocket-ship.svg" class="card-img align-middle"/>
+        <div class="col-md-2 card-img flex-column align-items-end">
+            <img src="../../images/rocket-ship.svg"/>
         </div>
         <div class="col-md-10">
             <div class="card-body">
-                <h5 class="card-title"><a href="/lessons/{{id}}">{{title}}</a></h5>
-                <p class="card-text"><small class="text-muted">by {{user.username}} on {{ format_date }}</small></p>
+                <h5 class="card-title flex-row justify-content-between"><a href="/lessons/{{id}}">{{title}}</a><p class="card-text"><small class="text-muted votes"><i class="fas fa-star"></i> {{vote_count}} {{format_plural "Star" vote_count}}</small></p></h5>
+                <p class="card-subtitle"><small class="text-muted">by {{user.username}} on {{ format_date }}</small></p>
                 <p class="card-text">{{desc}}</p>
-                <div>
-                    <p class="card-text"><small class="text-muted votes"><i class="fas fa-star"></i> {{vote_count}} {{format_plural "Star" vote_count}}</small></p>
-                    <p class="card-text"><small class="text-muted">{{comments.length}}
-                                {{format_plural "Comment" comments.length}}</small></p>
-                </div>
+                <p class="card-text"><small class="text-muted"><a href="/lessons/{{id}}">{{comments.length}} {{format_plural "Comment" comments.length}}</a></small></p>
             </div>
         </div>
     </div>    
