--- a/views/partials/lesson-info.handlebars
+++ b/views/partials/lesson-info.handlebars
@@ -4,7 +4,7 @@
         <span>({{format_url post_url}})</span>
     </div> --}}
     <div class="meta">
-        {{vote_count}} {{format_plural "Star" vote_count}} by {{user.username}} on {{format_date created_at}}
+        {{vote_count}} {{format_plural "Star" vote_count}} by {{user.username}} on {{format_date createdAt}}
         |
         <a href="/lessons/{{id}}">{{comments.length}} {{format_plural "Comment" comments.length}}</a>
     </div>
