Created new JS, CSS, HTML page routes, confirmed date changes are stable in new updates

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -31,21 +31,25 @@
                     </div>
                 </a>
                 {{/if}}
-                <div class="nav-item">
-                    <p class="nav-text">> HTML</p>
-                </div>
-                <div class="nav-item">
-                    <p class="nav-text">> CSS</p>
-                </div>
-                <a href="" id="nav-btn">
+                <a href="/html-lessons" id="nav-btn">
                     <div class="nav-item">
-                    <p class="nav-text">> JavaScript</p>
-                </div>
+                        <p class="nav-text">HTML</p>
+                    </div>
+                </a>
+                <a href="css-lessons" id="nav-btn">
+                    <div class="nav-item">
+                        <p class="nav-text">CSS</p>
+                    </div>
+                </a>
+                <a href="js-lessons" id="nav-btn">
+                    <div class="nav-item">
+                        <p class="nav-text">JavaScript</p>
+                    </div>
                 </a>
                 {{#if loggedIn}}
                     <a href="/new-lesson" id="add-btn">
                         <div class="nav-item">
-                            <p class="nav-text">Add Lesson!</p>
+                            <p class="nav-text">Contribute!</p>
                         </div>
                     </a>
                     <a href="/dashboard" id="add-btn">
