--- a/views/partials/lesson-info.handlebars
+++ b/views/partials/lesson-info.handlebars
@@ -1,12 +1,11 @@
 <article class="post">
-    {{!-- <div class="title">
-        <a href="{{post_url}}" target="_blank">{{title}}</a>
-        <span>({{format_url post_url}})</span>
-    </div> --}}
+     <div class="title">
+        <a href="/lessons/{{id}}">{{title}}</a>
+    </div> 
     <div class="meta">
         {{vote_count}} {{format_plural "Star" vote_count}} by {{user.username}} on {{format_date createdAt}}
         |
-        <a href="/lessons/{{id}}">{{comments.length}} {{format_plural "Comment" comments.length}}</a>
+        {{comments.length}} {{format_plural "Comment" comments.length}}
     </div>
     <p class="card-body">{{content}}</p>
 </article>
