Added new data to show on dedicated html, css, and js, also changed add-lesson to contribute for added detail on the site

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -8,6 +8,6 @@
 {{/if}}
 
 
-<button type="submit" class="btn"><a class="link" href="/new-lesson">+ New Lesson</a></button>
+{{!-- <button type="submit" class="btn"><a class="link" href="/new-lesson">+ New Lesson</a></button> --}}
  
 <script src="/javascript/add-lesson.js"></script>
