--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -47,7 +47,7 @@
                     </div>
                 </a>
                 {{#if loggedIn}}
-                    <a href="/new-lesson" id="add-btn">
+                    <a href="/how-to-contribute" id="add-btn">
                         <div class="nav-item">
                             <p class="nav-text">Contribute!</p>
                         </div>
