--- a/views/partials/add-lesson.handlebars
+++ b/views/partials/add-lesson.handlebars
@@ -6,6 +6,7 @@
     <label class="form-label" for="desc">Description</label>
     <input id="desc" name="desc" class="form-input" /><br>
 
+    {{!-- Filter section depending on which directory the user is in  --}}
     <input type="radio" id="1" name="topic_id" value="html">
     <label for="html">HTML</label><br>
 
