updated filtering for individual pages

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -44,33 +44,9 @@
                 <div class="nav-block accordian" id="Accordian">
                     <p class="uppercase nav-header">Learn</p>
                     <ul class="nav-list">
-                        <li class="nav-item" id="html"><a href="/html-lessons" data-toggle="collapse" data-target="#lesson-html"
-                                aria-controls="html">HTML</a></li>
-                        <div id="lesson-html" class="collapse show" aria-labelledby="html" data-parent="#Accordian">
-                            <ul class='nav-sub-list'>
-                                <li class="nav-sub-item"><a href="#">HTML 1</a></li>
-                                <li class="nav-sub-item"><a href="#">HTML 2</a></li>
-                                <li class="nav-sub-item"><a href="#">HTML 3</a></li>
-                            </ul>
-                        </div>
-                        <li class="nav-item" id="css"><a href="/css-lessons" data-toggle="collapse" data-target="#lesson-css"
-                                aria-controls="css">CSS</a></li>
-                        <div id="lesson-css" class="collapse" aria-labelledby="css" data-parent="#Accordian">
-                            <ul class='nav-sub-list'>
-                                <li class="nav-sub-item"><a href="#">CSS 1</a></li>
-                                <li class="nav-sub-item"><a href="#">CSS 2</a></li>
-                                <li class="nav-sub-item"><a href="#">CSS 3</a></li>
-                            </ul>
-                        </div>
-                        <li class="nav-item" id="js"><a href="/js-lessons" data-toggle="collapse" data-target="#lesson-js"
-                                aria-controls="js">Javascript</a></li>
-                        <div id="lesson-js" class="collapse" aria-labelledby="js" data-parent="#Accordian">
-                            <ul class='nav-sub-list'>
-                                <li class="nav-sub-item"><a href="#">JS 1</a></li>
-                                <li class="nav-sub-item"><a href="#">JS 2</a></li>
-                                <li class="nav-sub-item"><a href="#">JS 3</a></li>
-                            </ul>
-                        </div>
+                        <li class="nav-item" id="html"><a href="/html-lessons">HTML</a></li>
+                        <li class="nav-item" id="css"><a href="/css-lessons">CSS</a></li>
+                        <li class="nav-item" id="js"><a href="/js-lessons">Javascript</a></li>
                     </ul>
                 </div>
                 <div class="nav-block">
