Added new routes for community, community filtering, and POST method for adding POSTS in Community

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -8,6 +8,6 @@
 {{/if}}
 
 
-{{!-- <button type="submit" class="btn"><a class="link" href="/new-lesson">+ New Lesson</a></button> --}}
+<a class="link" href="/community">Go to Community!</a>
  
 <script src="/javascript/add-lesson.js"></script>
