--- a/views/partials/add-lesson.handlebars
+++ b/views/partials/add-lesson.handlebars
@@ -6,18 +6,12 @@
     <label class="form-label" for="desc">Description</label>
     <input id="desc" name="desc" class="form-input" /><br>
 
-    {{!-- Filter section depending on which directory the user is in  --}}
-    <input type="radio" id="1" name="topic_id" value="html">
-    <label for="html">HTML</label><br>
-
-    <input type="radio" id="2" name="topic_id" value="css">
-    <label for="css">CSS</label><br>
-
-    <input type="radio" id="3" name="topic_id" value="javascript">
-    <label for="javascript">JS</label><br>
+    {{!-- <input type="checkbox" id="disclaimer" name="disclaimer" value="disclaimer">
+    <label for="disclaimer">I Agree to <a href="/policy">Terms</a></label><br> --}}
 
     <button type="submit" class="btn">Post It!</button>
 </form>
 
 {{!-- Script Area --}}
 <script src="/javascript/add-lesson.js"></script>
+{{!-- <script src="/javascript/disclaimer.js"></script> --}}
