--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -63,16 +63,16 @@
                 <div class="nav-block">
                     <p class="uppercase nav-header">Community</p>
                     <ul class="nav-list">
-                        <li class="nav-item"><a href="#">Community Posts</a></li>
-                        <li class="nav-item"><a href="#">Your Posts</a></li>
+                        <li class="nav-item"><a href="/community">Community Posts</a></li>
+                        <li class="nav-item"><a href="/dashboard">Your Posts</a></li>
                     </ul>
                 </div>
-                <div class="nav-block">
+                {{!-- <div class="nav-block">
                     <p class="uppercase nav-header">Dashboard</p>
                     <ul class="nav-list">
                         <li class="nav-item"><a href="/dashboard">Your Articles</a></li>
                     </ul>
-                </div>
+                </div> --}}
                 {{/if}}
             </div>
         </nav>
