--- a/views/partials/lesson-info.handlebars
+++ b/views/partials/lesson-info.handlebars
@@ -1,7 +1,7 @@
 <div class="card mb-3">
     <div class="row no-gutters">
         <div class="col-md-2 card-img flex-column align-items-end">
-            <img src="../../images/rocket-ship.svg"/>
+            <img class="rocket-ship" src="../../images/rocket-ship.svg"/>
         </div>
         <div class="col-md-10">
             <div class="card-body">
