--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -48,9 +48,9 @@
                 <div class="nav-block accordian" id="Accordian">
                     <p class="uppercase nav-header">Learn</p>
                     <ul class="nav-list">
-                        <li class="nav-item" id="html"><a href="/html-lessons">HTML</a></li>
-                        <li class="nav-item" id="css"><a href="/css-lessons">CSS</a></li>
-                        <li class="nav-item" id="js"><a href="/js-lessons">Javascript</a></li>
+                        <li class="nav-item" id="html"><a href="/html">HTML</a></li>
+                        <li class="nav-item" id="css"><a href="/css">CSS</a></li>
+                        <li class="nav-item" id="js"><a href="/js">Javascript</a></li>
                     </ul>
                 </div>
                 <div class="nav-block">
