--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -9,8 +9,8 @@
         <input id="password-login" type="password" class="form-input form-control" />
     </div>
     <div class="d-flex align-items-end flex-column justify-content-end mb-3">
-        <button type="submit" class="btn bd-highlight">Login</button>
-        <a href="/signup" class="login-link btn-link"><small>Sign up instead</small></a>
+        <button type="submit" class="btn btn-deep-purple">Login</button>
+        <a href="/signup" class="login-link"><small>Sign up instead</small></a>
     </div>
 
 </form>
