--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -6,12 +6,13 @@
     </div>
     <div class="form-group">
         <label class="form-label" for="password-signup">Password</label>
-        <input id="password-signup" type="password" class="form-input form-control" aria-describedby="passwordHelp"/>
+        <input id="password-signup" type="password" class="form-input form-control" aria-describedby="passwordHelp" />
         <small id="passwordHelp" class="form-text text-muted">Passwords should be 8 or more characters</small>
     </div>
-
-    <button type="submit" class="button">Sign up</button>
-    <a class="login-link btn btn-link" href="/login">Log in instead</a>
+    <div class="d-flex align-items-end flex-column justify-content-end mb-3">
+        <button type="submit" class="btn btn-deep-purple">Sign up</button>
+        <a class="login-link" href="/login"><small>Log in instead</small></a>
+    </div>
 </form>
 
 <!-- Script Area -->
