--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,13 +1,19 @@
 {{#if lessons.length}}
-<section>
-    <h2>Your Posts</h2>
-    {{#each lessons as |lessons|}}
-        {{> dash-edit lessons}}
-    {{/each}}
-</section>
+<h2>Your Posts</h2>
+{{#each lessons as |lessons|}}
+<div class="card mb-3">
+    <div class="row no-gutters">
+        <div class="col-md-1 card-img flex-column align-items-end"></div>
+        <div class="col-md-11">
+            <a href="/dashboard/edit-lesson/{{lesson.id}}"><div class="card-body">
+                <span class="card-text flex-row justify-content-between"><p class="card-text"><small class="text-muted"> {{user.username}} {{ format_date createdAt }}</small></p><p class="card-text"><small class="text-muted votes"><i class="fas fa-star animated bounceIn"></i> {{vote_count}} {{format_plural "Star" vote_count}}</small></p></span>
+                <h5 class="card-title flex-row justify-content-between">{{title}}<p class="card-text"><small class="text-muted votes"></small></p></h5>
+                <p class="card-text">{{desc}}</p>
+               <p class="card-text">{{comments.length}} {{format_plural "Comment" comments.length}}</p>
+            </div></a>
+        </div>
+    </div>
+{{/each}}
 {{/if}}
-
-
-<a class="link" href="/community">Go to Community!</a>
  
 <script src="/javascript/add-lesson.js"></script>
